--- a/pom.xml
+++ b/pom.xml
@@ -75,9 +75,7 @@
 						</goals>
 						<configuration>
 							<additionalProperties>
-								<project.description>This is a demo project to manage users and
-									tokens in the SafeNet authentication platform using REST API
-									endpoints.</project.description>
+								<project.description>${description}</project.description>
 								<contact.email>hello@onewelco.me</contact.email>
 								<contact.git.name>SafeNet Workflow API Documentation (Git)</contact.git.name>
 								<contact.git.url>https://github.com/thalesdemo/safenet-workflow-api</contact.git.url>
