--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.thalesdemo</groupId>
 	<artifactId>safenet-workflow-api</artifactId>
 	<version>0.0.1</version>
-	<name>SafeNet Workflow API</name>
+	<name>SafeNet RESTful Workflow API</name>
 	<description>This is a demo project to manage users and tokens in the SafeNet authentication platform using REST API endpoints</description>
 	<properties>
 		<java.version>11</java.version>
@@ -34,6 +34,12 @@
 			<groupId>com.thalesdemo</groupId>
 			<artifactId>soap-bsidca</artifactId>
 			<version>1.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-slf4j-impl</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -75,7 +81,7 @@
 						</goals>
 						<configuration>
 							<additionalProperties>
-								<project.description>${description}</project.description>
+								<project.description>${project.description}</project.description>
 								<contact.email>hello@onewelco.me</contact.email>
 								<contact.git.name>SafeNet Workflow API Documentation (Git)</contact.git.name>
 								<contact.git.url>https://github.com/thalesdemo/safenet-workflow-api</contact.git.url>
